--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <script src="js/game/states/Preloader.js"></script>
     <script src="js/game/states/MainMenu.js"></script>
     <script src="js/game/states/Game.js"></script>
+    <script src="js/game/prefabs/Item.js"></script>
+    <script src="js/game/prefabs/Obstacle.js"></script>
 </head>
 
 <body>
 <script type="text/javascript">
     (function () {
-        var game = new Phaser.Game(window.innerWidth, window.innerHeight, Phaser.AUTO, 'gameContainer');
+        var game = new Phaser.Game(800, 600, Phaser.AUTO, 'gameContainer');
         game.state.add('Boot', Runner.Boot);
         game.state.add('Preloader', Runner.Preloader);
         game.state.add('MainMenu', Runner.MainMenu);
