--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <script src="js/game/states/MainMenu.js"></script>
     <script src="js/game/states/Game.js"></script>
     <script src="js/game/prefabs/Item.js"></script>
+    <script src="js/game/prefabs/BadItem.js"></script>
     <script src="js/game/prefabs/Obstacle.js"></script>
+
 </head>
 
 <body>
