implemented good and bad items implemented basic weight display added spritesheets for good and bad items changed collision with items to overlap

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="js/game/states/Game.js"></script>
     <script src="js/game/prefabs/Item.js"></script>
     <script src="js/game/prefabs/BadItem.js"></script>
+    <script src="js/game/prefabs/GoodItem.js"></script>
     <script src="js/game/prefabs/Obstacle.js"></script>
 
 </head>
