-refactoring: created player prototype

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="js/game/prefabs/BadItem.js"></script>
     <script src="js/game/prefabs/GoodItem.js"></script>
     <script src="js/game/prefabs/Obstacle.js"></script>
+    <script src="js/game/prefabs/Player.js"></script>
 
 </head>
 
