#18 obstacles can now be destroyed through rolling

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="js/game/prefabs/GoodItem.js"></script>
     <script src="js/game/prefabs/Obstacle.js"></script>
     <script src="js/game/prefabs/Player.js"></script>
+    <script src="js/game/prefabs/Explosion.js"></script>
 
 </head>
 
