--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="js/game/prefabs/GoodItem.js"></script>
     <script src="js/game/prefabs/Obstacle.js"></script>
     <script src="js/game/prefabs/Player.js"></script>
+    <script src="js/game/prefabs/Enemy.js"></script>
     <script src="js/game/prefabs/Explosion.js"></script>
     <script src="js/game/prefabs/GoalFlag.js"></script>
 
