-fixed bugs in enemy movement -refactoring: created HumanPlayer and EnemyPlayer prototypes that inherit from the Player prototype

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <script src="js/game/prefabs/GoodItem.js"></script>
     <script src="js/game/prefabs/Obstacle.js"></script>
     <script src="js/game/prefabs/Player.js"></script>
-    <script src="js/game/prefabs/Enemy.js"></script>
+    <script src="js/game/prefabs/HumanPlayer.js"></script>
+    <script src="js/game/prefabs/EnemyPlayer.js"></script>
     <script src="js/game/prefabs/Explosion.js"></script>
     <script src="js/game/prefabs/GoalFlag.js"></script>
 
