--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <script src="js/game/states/Preloader.js"></script>
     <script src="js/game/states/MainMenu.js"></script>
     <script src="js/game/states/Game.js"></script>
-    <script src="js/game/states/GameOver.js"></script>
     <script src="js/game/prefabs/Item.js"></script>
     <script src="js/game/prefabs/BadItem.js"></script>
     <script src="js/game/prefabs/GoodItem.js"></script>
@@ -23,6 +22,7 @@
     <script src="js/game/prefabs/HumanPlayer.js"></script>
     <script src="js/game/prefabs/EnemyPlayer.js"></script>
     <script src="js/game/prefabs/Explosion.js"></script>
+    <script src="js/game/prefabs/Scoreboard.js"></script>
     <script src="js/game/prefabs/GoalFlag.js"></script>
     <script src="js/game/states/LevelsMenu.js"></script>
     <script src="js/game/states/SettingsMenu.js"></script>
