--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="js/game/prefabs/Explosion.js"></script>
     <script src="js/game/prefabs/Scoreboard.js"></script>
     <script src="js/game/prefabs/GoalFlag.js"></script>
+    <script src="js/game/prefabs/WeightOMeter.js"></script>
     <script src="js/game/states/LevelsMenu.js"></script>
     <script src="js/game/states/SettingsMenu.js"></script>
 
