--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <script src="js/game/states/LevelsMenu.js"></script>
     <script src="js/game/states/SettingsMenu.js"></script>
 
+    <!-- include fonts-->
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
