added yellow weightBar to weightOMeter

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="js/game/prefabs/GoalFlag.js"></script>
     <script src="js/game/prefabs/PositiveWeightBar.js"></script>
     <script src="js/game/prefabs/NegativeWeightBar.js"></script>
+    <script src="js/game/prefabs/PositiveWeightBarYellow.js"></script>
     <script src="js/game/states/LevelsMenu.js"></script>
     <script src="js/game/states/SettingsMenu.js"></script>
 
